fixed image size on mobile

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -3,6 +3,7 @@
 .App {
   text-align: center;
   overflow-y: hidden;
+  max-width: 100vw;
   background: linear-gradient(
     -45deg,
     #123348,
